fixed sizes on iphone

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -35,7 +35,7 @@
 
     nav {
       p {
-        padding: $size-px-5;
+        padding: 0;
       }
 
       button {
